--- a/biological-sciences.html
+++ b/biological-sciences.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Biological Sciences - Capstone Presentations Autumn 2024</title>
+    <title>Biological Sciences - Capstone Presentations Summer 2024</title>
     <link rel="stylesheet" href="css/presentations.css">
     <link rel="stylesheet" href="css/uw-button.css">
     <link rel="stylesheet" href="css/homepage.css">
@@ -29,7 +29,7 @@
 
                         <ul class="dawgdrops-menu dawgdrops-menu-em" id="menu-102">
                             <li>
-                                <a href="./biological-sciences.html" title="BIO">Biology</a>
+                                <a href="./biological-sciences.html" title="BIO">Biology Term B</a>
                             </li>
                         </ul>
                     </li>
@@ -41,9 +41,6 @@
                         <ul class="dawgdrops-menu dawgdrops-menu-em" id="menu-104">
                             <li>
                                 <a href="./csse.html" title="CSSE">Computer Science & Software Engineering</a>
-                            </li>
-                            <li>
-                                <a href="./applied-computing.html" title="ACMPT">Applied Computing</a>
                             </li>
                         </ul>
 
@@ -76,13 +73,22 @@
                             </li>
                         </ul>
                     </li>
+                    <li class="dawgdrops-item">
+                        <a class="dropdown-toggle" href="#" id="102" title="Physics">REU</a>
+
+                        <ul class="dawgdrops-menu dawgdrops-menu-em" id="menu-104">
+                            <li>
+                                <a href="./reu.html" title="PHYS">Research Experiences for Undergraduates</a>
+                            </li>
+                        </ul>
+                    </li>
                 </ul>
             </div>
         </nav>
 
 
         <div class="black-box">
-            <h1>Autumn 2024 Capstone & Symposium</h1>
+            <h1>Summer 2024 Capstone & Symposium</h1>
         </div>
 
 
@@ -93,13 +99,12 @@
         <hr>
     </header>
 
-    <h2>Biology Term A</h2>
+    <h2>Biology Term B</h2>
     <p class="date">August 16, 2024 </p>>
 
     <p class="text">
-        <b>Oral Presentations:</b> Innovation Hall 111 | 9:00 PM to 3:45 PM
-        </br></br><b>Poster Sessions: </b>Innovation Hall 1st and 2rd floor | 11:30 AM - 12:30 PM |&nbsp <a
-            href="bio-presentation.html"> View Posters Here </a></br></br><br /><br />
+        <b>Oral Presentations:</b> Innovation Hall 134 | 10:10 AM to 11:25 AM
+
 
 
 
@@ -112,9 +117,9 @@
 
     <!-- -------------------------------------- Intro ------------------------------------------ -->
     <div class="info-box">
-        <h4>11:30 AM - 11:45 AM</h4>
+        <h4>10:10 AM - 10:15 AM</h4>
         <h1>Welcome & Introductions</h1>
-        <h2>Dr. Alaron Lewis, Division Chair Biological Sciences</h2>
+        <h2>Division Chair Of Biological Sciences</h2>
     </div>
 
     <section id="room-1-presentations" class="room"></section>
